<resources>
    <string name="app_name">千百叶</string>
    <string name="photo_button">拍摄</string>
    <string name="text_home">Home</string>
    <string name="text_forest">森林</string>
    <string name="text_data">资料库</string>
    <string name="photo_manage">管理照片</string>
    <string name="text_contact">我</string>
    <string name="description_title">名称</string>
    <string name="description_content">描述</string>
    <string name="title_forest">我的收藏</string>
    <string name="title_info">地图</string>
    <string name="title_setting">设置</string>
    <string name="title_leaf_fragment">具体信息</string>
    <string name="login_username">帐号</string>
    <string name="login_password">密码</string>
    <string name="login_button">登录</string>
    <string name="username_hint">在此输入你的帐号</string>
    <string name="password_hint">在此输入你的密码(我会保密的！)</string>
    <string name="chara_qian">千</string>
    <string name="chara_bai">百</string>
    <string name="chara_ye">叶</string>
    <string name="register_button">注册</string>
    <string name="recognize_button">识别</string>
    <string name="welcome_motto">欢迎使用千百叶！</string>
    <string name="location_column">最近一次曾在这遇见它</string>
</resources>
