<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/longin_background"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/chara_qian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:text="@string/chara_qian"
            android:textSize="30dp"
            />
        <TextView
            android:id="@+id/chara_bai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chara_qian"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="70dp"
            android:text="@string/chara_bai"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/chara_ye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chara_qian"
            android:layout_marginTop="70dp"
            android:layout_alignLeft="@id/chara_bai"
            android:layout_marginLeft="210dp"
            android:text="@string/chara_ye"
            android:textSize="30dp"
            />
        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_corner"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/username_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textStyle="normal"
            android:layout_below="@id/username_label"
            android:hint="@string/username_hint"
            android:inputType="text"
            />
        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/username_text"
            android:text="@string/login_password"
            android:textSize="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/password_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textStyle="normal"
            android:layout_below="@id/password_label"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_text"
            android:layout_alignRight="@id/password_text"
            android:text="@string/login_button"
            android:background="@drawable/button_style"
            />

    </RelativeLayout>

</LinearLayout>